--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -528,22 +528,20 @@ function showMap(focusId = null) {
     const targetScale = Math.max(minScale, TARGET_SCALE);
     const targetTf = id ? computeTransformForPin(id, targetScale) : { ...fit, scale: minScale };
     
-    // 5) Transformation anwenden
-    if (targetTf) {
-      // ✅ Korrigierte Methode: Pan-Befehl separat aufrufen
-      panzoomInstance.pan(targetTf.x, targetTf.y, { animate: true, duration: 350 });
-      
-      // ✅ Verzögerung: Zoom-Befehl mit einer kleinen Pause aufrufen
-      // Dies stellt sicher, dass Panzoom den Pan-Befehl verarbeitet,
-      // bevor der Zoom-Befehl eintrifft.
-      setTimeout(() => {
-        panzoomInstance.zoom(targetTf.scale, { animate: true, duration: 350 });
-      }, 50); // 50 Millisekunden Verzögerung
+    const pinLoc = id ? computePinLocation(id) : null;
+    const targetScale = Math.max(minScale, TARGET_SCALE);
 
-      console.log(`🔍 Fokus auf ${id} → x:${Math.round(targetTf.x)} y:${Math.round(targetTf.y)} s:${targetTf.scale.toFixed(2)}`);
-    } else {
-      console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
-    }
+    if (pinLoc) {
+        // ✅ Korrigierte und robuste Methode: mit zoomToPoint direkt auf die Pin-Position fokussieren.
+        // Die Panzoom-Bibliothek berechnet automatisch die richtige Pan- und Zoom-Transformation in einem Schritt.
+        panzoomInstance.zoomToPoint(targetScale, pinLoc.x, pinLoc.y, { animate: true });
+
+        console.log(`🔍 Fokus auf ${id} bei x:${Math.round(pinLoc.x)} y:${Math.round(pinLoc.y)} mit s:${targetScale.toFixed(2)}`);
+    } else {
+        // Wenn kein Pin fokussiert werden soll, einfach die Karte auf die anfängliche Position zurücksetzen.
+        panzoomInstance.setTransform(fit.x, fit.y, fit.scale, { animate: true });
+        console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
+    }
   }); // waitForImage
 }
   
@@ -956,6 +954,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
