--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -541,7 +541,80 @@ function showMap(focusId = null) {
     }
   }); // waitForImage
 }
+function showMap(focusId = null) {
+  // Tabs umschalten & UI aktualisieren
+  document.getElementById('tab-map').classList.add('active');
+  document.getElementById('tab-list').classList.remove('active');
+  wrapEl.classList.add('active');
+  document.getElementById('list').style.display = 'none';
 
+  // Mobil: Vollbild & Höhe setzen
+  if (isMobile()) {
+    enterMapFullscreen();
+    setFullscreenVH();
+    enableVHWatchers();
+  }
+
+  const mapImgEl = document.querySelector('.map-img');
+
+  waitForImage(mapImgEl, () => {
+    // 1) Fit & minScale berechnen
+    const fit = computeFit(START_X_PERCENT);
+    const minScale = fit.scale;
+    currentMinScale = minScale;
+
+    // 2) Panzoom initialisieren (falls noch nicht geschehen)
+    if (!panzoomInstance) {
+      panzoomInstance = Panzoom(mapEl, {
+        contain: 'outside',
+        maxScale: 4,
+        startScale: fit.scale,
+        startX: fit.x,
+        startY: fit.y,
+        animate: true,
+        duration: 350,
+        easing: 'ease-in-out',
+        minScale: minScale
+      });
+      // Desktop: Mausrad-Zoom
+      wrapEl.addEventListener('wheel', (e) => {
+        e.preventDefault();
+        panzoomInstance.zoomWithWheel(e, { animate: true });
+      }, { passive: false });
+    
+      window.panzoomInstance = panzoomInstance;
+      window.wrapEl = wrapEl;
+      window.mapEl = mapEl;
+    } else {
+        // Bei erneuter Ansicht: minScale aktualisieren
+        panzoomInstance.setOptions({ minScale: minScale, animate: true });
+    }
+
+    // 3) Ziel-ID bestimmen & Pin highlighten
+    const rawId = focusId || lastFocusId || getFocusFromURL() || null;
+    const id = (typeof resolveId === 'function') ? resolveId(rawId) : rawId;
+
+    if (id) {
+      lastFocusId = id;
+      highlightPin(id);
+    } else {
+      clearHighlight();
+    }
+    
+    const pinLoc = id ? getPinCenter(id) : null;
+    const targetScale = Math.max(minScale, TARGET_SCALE);
+
+    if (pinLoc) {
+        // Nutze die korrekte Panzoom-Methode, die auf die Pin-Mitte zentriert
+        panzoomInstance.zoomToPoint(targetScale, pinLoc.cx, pinLoc.cy, { animate: true });
+        console.log(`🔍 Fokus auf ${id} bei x:${Math.round(pinLoc.cx)} y:${Math.round(pinLoc.cy)} mit s:${targetScale.toFixed(2)}`);
+    } else {
+        // Wenn kein Pin fokussiert werden soll, die Karte auf die anfängliche Position zurücksetzen.
+        panzoomInstance.setTransform(fit.x, fit.y, fit.scale, { animate: true });
+        console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
+    }
+  }); // waitForImage
+}
   /* ====== LISTE & DATEN ====== */
 const categories = [
   // Kids / Freizeit
@@ -794,14 +867,6 @@ function getPinCenter(id) {
   }
   return null;
 }
-
-  // Dieser Code-Abschnitt wurde entfernt, da er die Ursache für NaN war.
-  // const cx = el.offsetLeft + el.offsetWidth / 2;
-  // const cy = el.offsetTop + el.offsetHeight / 2;
-  // return { cx, cy };
-
-  return null;
-}
   
 // ===== DEBUG-KIT: alles zur Konsole =====
 (function () {
@@ -946,6 +1011,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
