--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -34,16 +34,16 @@
   .btn { padding:10px 12px; border-radius:10px; background:#111; color:#fff; font-size:14px; border:none; cursor:pointer; }
   .btn.ghost { background:#fff; color:#111; border:1px solid #ddd; }
 
-  /* Karte */
 .mapwrap {
-  display: none;
-  height: calc(100vh - 112px);
-  overflow: hidden;
-  position: relative;
-  background: #000;
-  touch-action: none; /* 👈 Diese Eigenschaft ist entscheidend */
-  overscroll-behavior: contain;
+  /* ... andere Eigenschaften ... */
+  height: auto; /* Kann entfernt werden, ist aber zur Verdeutlichung nützlich */
+  position: absolute;
+  top: 112px; 
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
+  und 
 .mapwrap.active { display:block; }
 
 .map {
@@ -467,81 +467,11 @@ function debugFocus(id, scale){
 }
   
 function showMap(focusId = null) {
-  // Tabs umschalten & UI aktualisieren
-  document.getElementById('tab-map').classList.add('active');
-  document.getElementById('tab-list').classList.remove('active');
-  wrapEl.classList.add('active');
-  document.getElementById('list').style.display = 'none';
-
-  // Mobil: Vollbild & Höhe setzen
-  if (isMobile()) {
-    enterMapFullscreen();
-    setFullscreenVH();
-    setFullscreenVH(); // Ruft die Funktion auf, um die Höhe korrekt einzustellen
-    enableVHWatchers();
+  // Zuerst bestehende Panzoom-Instanz zerstören
+  if (panzoomInstance) {
+    panzoomInstance.destroy();
+    panzoomInstance = null;
   }
-
-  const mapImgEl = document.querySelector('.map-img');
-
-  waitForImage(mapImgEl, () => {
-    // 1) Fit & minScale berechnen
-    const fit = computeFit(START_X_PERCENT);
-    const minScale = fit.scale;
-    currentMinScale = minScale;
-
-    // 2) Panzoom initialisieren (falls noch nicht geschehen)
-    if (!panzoomInstance) {
-      panzoomInstance = Panzoom(mapEl, {
-        contain: 'outside',
-        maxScale: 4,
-        startScale: fit.scale,
-        startX: fit.x,
-        startY: fit.y,
-        animate: true,
-        duration: 350,
-        easing: 'ease-in-out',
-        minScale: minScale
-      });
-      // Desktop: Mausrad-Zoom
-      wrapEl.addEventListener('wheel', (e) => {
-        e.preventDefault();
-        panzoomInstance.zoomWithWheel(e, { animate: true });
-      }, { passive: false });
-    
-      window.panzoomInstance = panzoomInstance;
-      window.wrapEl = wrapEl;
-      window.mapEl = mapEl;
-    } else {
-        // Bei erneuter Ansicht: minScale aktualisieren
-        panzoomInstance.setOptions({ minScale: minScale, animate: true });
-    }
-
-    // 3) Ziel-ID bestimmen & Pin highlighten
-    const rawId = focusId || lastFocusId || getFocusFromURL() || null;
-    const id = (typeof resolveId === 'function') ? resolveId(rawId) : rawId;
-
-    if (id) {
-      lastFocusId = id;
-      highlightPin(id);
-    } else {
-      clearHighlight();
-    }
-    
-    const pinLoc = id ? getPinCenter(id) : null;
-    const targetScale = Math.max(minScale, TARGET_SCALE);
-
-    if (pinLoc) {
-        // Nutze die korrekte Panzoom-Methode, die auf die Pin-Mitte zentriert
-        panzoomInstance.zoomToPoint(targetScale, pinLoc.cx, pinLoc.cy, { animate: true });
-        console.log(`🔍 Fokus auf ${id} bei x:${Math.round(pinLoc.cx)} y:${Math.round(pinLoc.cy)} mit s:${targetScale.toFixed(2)}`);
-    } else {
-        // Wenn kein Pin fokussiert werden soll, die Karte auf die anfängliche Position zurücksetzen.
-        panzoomInstance.setTransform(fit.x, fit.y, fit.scale, { animate: true });
-        console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
-    }
-  }); // waitForImage
-}
-function showMap(focusId = null) {
   // Tabs umschalten & UI aktualisieren
   document.getElementById('tab-map').classList.add('active');
   document.getElementById('tab-list').classList.remove('active');
@@ -563,33 +493,29 @@ function showMap(focusId = null) {
     const minScale = fit.scale;
     currentMinScale = minScale;
 
-    // 2) Panzoom initialisieren (falls noch nicht geschehen)
-    if (!panzoomInstance) {
-      panzoomInstance = Panzoom(mapEl, {
-        contain: 'outside',
-        maxScale: 4,
-        startScale: fit.scale,
-        startX: fit.x,
-        startY: fit.y,
-        animate: true,
-        duration: 350,
-        easing: 'ease-in-out',
-        minScale: minScale
-      });
-      // Desktop: Mausrad-Zoom
-      wrapEl.addEventListener('wheel', (e) => {
-        e.preventDefault();
-        panzoomInstance.zoomWithWheel(e, { animate: true });
-      }, { passive: false });
-    
-      window.panzoomInstance = panzoomInstance;
-      window.wrapEl = wrapEl;
-      window.mapEl = mapEl;
-    } else {
-        // Bei erneuter Ansicht: minScale aktualisieren
-        panzoomInstance.setOptions({ minScale: minScale, animate: true });
-    }
+    // 2) Panzoom initialisieren (jetzt immer neu)
+    panzoomInstance = Panzoom(mapEl, {
+      contain: 'outside',
+      maxScale: 4,
+      startScale: fit.scale,
+      startX: fit.x,
+      startY: fit.y,
+      animate: true,
+      duration: 350,
+      easing: 'ease-in-out',
+      minScale: minScale
+    });
 
+    // Desktop: Mausrad-Zoom
+    wrapEl.addEventListener('wheel', (e) => {
+      e.preventDefault();
+      panzoomInstance.zoomWithWheel(e, { animate: true });
+    }, { passive: false });
+    
+    window.panzoomInstance = panzoomInstance;
+    window.wrapEl = wrapEl;
+    window.mapEl = mapEl;
+    
     // 3) Ziel-ID bestimmen & Pin highlighten
     const rawId = focusId || lastFocusId || getFocusFromURL() || null;
     const id = (typeof resolveId === 'function') ? resolveId(rawId) : rawId;
@@ -1011,6 +937,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
