--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -371,11 +371,17 @@ function getTfSafe() {
       setOptsSafe({ minScale: fit.scale });
       currentMinScale = fit.scale;
 
-      const targetScale = Math.max(fit.scale, TARGET_SCALE);
-      const id = lastFocusId || getFocusFromURL();
-      const tf = id ? computeTransformForPin(id, targetScale) : { ...fit, scale: targetScale };
-      applyTransform(tf, false);
-    }
+const targetScale = Math.max(fit.scale, TARGET_SCALE);
+const id = lastFocusId || getFocusFromURL();
+const tf = id ? computeTransformForPin(id, targetScale) : { ...fit, scale: targetScale };
+
+// statt applyTransform(...):
+if (tf && panzoomInstance) {
+  panzoomInstance.pan(tf.x, tf.y, { animate: true, duration: 300 });
+  setTimeout(() => {
+    panzoomInstance.zoom(tf.scale, { animate: true, duration: 300 });
+  }, 50);
+}
   });
 }
 
@@ -388,54 +394,6 @@ function getTfSafe() {
     return { scale, x, y };
   }
   
-function computeTransformForPin(id, scale) {
-  const c = getPinCenter(id);
-  if (!c) return null;
-
-  const rect = wrapEl.getBoundingClientRect();
-  const viewCx = rect.width / 2;
-  const viewCy = rect.height / 2;
-
-  // 1. Berechne die gewünschte Pan-Position.
-  // Pan-Wert ist der Unterschied zwischen Viewport-Mitte und dem skalierten Pin-Mittelpunkt.
-  const x = viewCx - (c.cx * scale);
-  const y = viewCy - (c.cy * scale);
-
-  const mapW = MAP_W * scale;
-  const mapH = MAP_H * scale;
-
-  // 2. Bounding (Begrenzung): Stelle sicher, dass die Karte nicht aus dem Sichtfeld rutscht.
-  let minX, maxX, minY, maxY;
-  
-  // Begrenzung für X
-  if (mapW >= rect.width) {
-    // Karte ist breiter als der Viewport
-    minX = rect.width - mapW;
-    maxX = 0;
-  } else {
-    // Karte ist schmaler, zentriere sie
-    minX = maxX = (rect.width - mapW) / 2;
-  }
-
-  // Begrenzung für Y
-  if (mapH >= rect.height) {
-    // Karte ist höher als der Viewport
-    minY = rect.height - mapH;
-    maxY = 0;
-  } else {
-    // Karte ist kürzer, zentriere sie
-    minY = maxY = (rect.height - mapH) / 2;
-  }
-
-  // 3. Klammere die berechneten Pan-Werte, damit sie innerhalb der Grenzen bleiben.
-  // Eine kleine Pufferzone (BLEED) kann die Animation weicher machen.
-  const BLEED = 10;
-  const finalX = clamp(x, minX - BLEED, maxX + BLEED);
-  const finalY = clamp(y, minY - BLEED, maxY + BLEED);
-
-  return { x: finalX, y: finalY, scale };
-}
-
 // Hilfsfunktion zum Begrenzen eines Werts
 function clamp(value, min, max) {
   return Math.max(min, Math.min(value, max));
@@ -569,22 +527,18 @@ function showMap(focusId = null) {
 }
 
 // Überarbeitete Funktion: Entfernung der unnötigen Begrenzung.
-function computeTransformForPin(id, scale) {
+
+  function computeTransformForPin(id, scale) {
   const c = getPinCenter(id);
   if (!c) return null;
-
   const rect = wrapEl.getBoundingClientRect();
   const viewCx = rect.width / 2;
   const viewCy = rect.height / 2;
-
-  // Pan-Werte sind der Unterschied zwischen der Mitte des Viewports
-  // und dem skalierten Pin-Mittelpunkt.
   const x = viewCx - (c.cx * scale);
   const y = viewCy - (c.cy * scale);
-  
-  // Panzoom übernimmt die Begrenzung, wir müssen nur die reinen Werte liefern
   return { x, y, scale };
 }
+
   
   /* ====== LISTE & DATEN ====== */
 const categories = [
@@ -994,6 +948,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
