--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -52,7 +52,6 @@
   height:1080px;
   touch-action:none;
   will-change: transform;
-  transform-origin: 0 0 !important;  /* 👈 Anker oben/links – wichtig für korrektes pan/zoom */
 }
 
 .map-img {
@@ -390,18 +389,15 @@ function getTfSafe() {
   }
   
 function computeTransformForPin(id, scale) {
-  const c = getPinCenter(id);
+  const c = getPinCenter(id); // Diese Funktion bleibt unverändert
   if (!c) return null;
 
-  const rect = wrapEl.getBoundingClientRect();
-  const viewCx = rect.width / 2;
-  const viewCy = rect.height / 2;
+  // Die neue Berechnung geht vom Mittelpunkt der Karte aus.
+  // Wir berechnen den Vektor vom Kartenzentrum zum Pin und verschieben
+  // die Karte um den negativen, skalierten Betrag.
+  const x = (MAP_W / 2 - c.cx) * scale;
+  const y = (MAP_H / 2 - c.cy) * scale;
 
-  // Berechne die ideale Position, um den Pin in die Mitte zu rücken.
-  // Wir überlassen das Begrenzen der Karte komplett dem Panzoom-Plugin.
-  const x = viewCx - (c.cx * scale);
-  const y = viewCy - (c.cy * scale);
-  
   return { x, y, scale };
 }
   
@@ -735,8 +731,9 @@ function renderList(areaIds){
   });
 }
 
-  document.querySelectorAll('.pin').forEach(el => {
-  el.addEventListener('click', () => {
+document.querySelectorAll('.pin').forEach(el => {
+  el.addEventListener('pointerdown', (e) => {
+    e.stopPropagation(); // Verhindert, dass Panzoom das Event bekommt und die Karte verschiebt
     const id = el.id.replace('pin-','');
     lastFocusId = id;
     highlightPin(id);
@@ -936,6 +933,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
