--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -934,11 +934,12 @@ function getPinCenter(id) {
 
   /* ====== Start ====== */
   render();
-  openSheet()
+  openSheet();
   showList(); // immer mit Liste starten
 </script>
 </body>
 </html>
+
 
 
 
